Adding Enable and Disable Features

--- a/src/Orchard.Cms.Web/Modules/Orchard.Modules/project.json
+++ b/src/Orchard.Cms.Web/Modules/Orchard.Modules/project.json
@@ -9,6 +9,7 @@
     "Orchard.DisplayManagement": "2.0.0-*",
     "Orchard.Recipes.Abstractions": "2.0.0-*",
     "Orchard.Environment.Extensions.Abstractions": "2.0.0-*",
+    "Orchard.Environment.Shell.Abstractions": "2.0.0-*",
     "Orchard.ResourceManagement.Abstractions": "1.0.0-*",
     "System.Linq.Parallel": "4.0.1"
   },
